<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/createAccount"
        android:orderInCategory="100"
        android:icon="@drawable/ic_person_add_white_24dp"
        android:title="@string/create_an_account"
        app:showAsAction="always" />

</menu>