...
        mi dapibus.
    </string>

    <!-- =================================== Errors ===================================== -->

    <string name="error_empty">This field cannot be empty.</string>
    <string name="error_email">Invalid email address.</string>
    <string name="error_password">Password needs to be at least 8 characters.</string>
    <string name="error_retype_password">Passwords do not match.</string>
    <string name="error_website">Invalid web address.</string>
    <string name="error_auth_failed">Current password was incorrect.</string>
    <string name="error_password_does_not_meet_criteria">Password requires at least 2
        numbers and be at least 8 characters in length.</string>
    <string name="error_creating_account">Error creating account. Please try again later.</string>
...
